button in events on mobile fix

--- a/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
+++ b/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
@@ -35,9 +35,11 @@
 		@include media-breakpoint-up(xs) {
 			padding-right:10px;
 			padding-left:10px;
+			text-align:left;
 		}
 		@include media-breakpoint-up(sm) {
 			width: 100%;
+			text-align:center;
 		}
 		@include media-breakpoint-up(md) {
 			width: 240px;
